--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
 </head>
 <body>
     <div class="taskbar">
-        <img src="" alt="">
-        <img class="right" src="taskbarright.PNG" alt="">
+        <img src="/logo_small.png" alt="Sparks logo">
     </div>
-    <div class="startmenu">
-        <img src="startmenu.PNG" alt="">
-    </div>
-    <video autoplay muted class="vid">
-        <source src="/Keyboard_Donate.mp4" type="video/webm">
+    <video loop autoplay muted class="vid">
+        <source src="/pexels-julia-m-cameron-6893774.mp4" type="video/webm">
     </video>
     
 </body>
