--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="taskbar">
         <img src="/logo_small.png" alt="Sparks logo">
+        <span><h2>The Sparks Foundation</h2></span>
     </div>
     <video loop autoplay muted class="vid">
         <source src="/pexels-julia-m-cameron-6893774.mp4" type="video/webm">
