--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <span><h2>The Sparks Foundation</h2></span>
     </div>
     <video loop autoplay muted class="vid">
-        <source src="/pexels-julia-m-cameron-6893774.mp4" type="video/webm">
+        <source src="/donationVideo.mp4" type="video/webm">
     </video>
     
 </body>
