--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
 </head>
 <body>
     <div class="taskbar">
-        <img src="/logo_small.png" alt="Sparks logo">
+        <img id="logo" src="/logo_small.png" alt="Sparks logo">
+        <ul class="right">
+            <li class="menu-item">Home</li>
+            <li class="menu-item"><a href="/contact.html">Contact</a></li>
+        </ul>
         <span><h2>The Sparks Foundation</h2></span>
     </div>
-    <video loop autoplay muted class="vid">
-        <source src="/donationVideo.mp4" type="video/mp4">
-    </video>
+    <img src="/donationImage.jpg" alt="io" class="image">
+    <div class="main">
+        <h1>We need your help.</h1><br><br>
+        <p>
+            As a non-profit, we rely on donations to provide the food to homeless people,<br> specially in these times of pandemic,<br> they need you the most.<br><br><b>100% of your donation will be spent on the food and homeless people that are counting on you.</b>
+        </p>
+        <button class="btn">Donate</button>
+    </div>
     
 </body>
 <script src="script.js"></script>
