--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link rel="stylesheet" href="style.css">
+  <title>PAYMENT GATEWAY</title>
 </head>
+
+
 <body>
+    <div class="taskbar">
+        <img id="logo" src="https://www.thesparksfoundationsingapore.org/images/logo_small.png" alt="Sparks logo">
+        <ul class="right">
+            <li class="menu-item">Home</li>
+            <li class="menu-item"><a href="/contact.html">Contact</a></li>
+        </ul>
+        <span><h2>The Sparks Foundation</h2></span>
+    </div>
+    <img src="https://img.freepik.com/free-vector/homeless-dirty-man-sitting-ground-with-nameplate-need-help-isolated-flat-vector-illustration-cartoon-desperate-poor-person-sitting-street-near-trash-charity-unemployment-concept_74855-10091.jpg?size=626&ext=jpg&ga=GA1.2.1615818343.1630540800" alt="body-image" class="image">
     
+    <div id="bottom">
+        <p>©2021 Hritik Kumar</p>
+    </div>  
+
 </body>
 </html>
