--- a/donate.html
+++ b/donate.html
@@ -15,7 +15,7 @@
         <img id="logo" src="https://www.thesparksfoundationsingapore.org/images/logo_small.png" alt="Sparks logo">
         <ul class="right">
             <li class="menu-item">Home</li>
-            <li class="menu-item"><a href="/contact.html">Contact</a></li>
+            <li class="menu-item"><a href="contact.html">Contact</a></li>
         </ul>
         <span><h2>The Sparks Foundation</h2></span>
     </div>
@@ -24,7 +24,7 @@
         <h3>You are truely making this world a better place to live in!</h3><br><br>
         <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Htt5OTUZTTywMO" async> </script> </form>
     </form>
-    
+
     <div id="bottom">
         <p>©2021 Hritik Kumar</p>
     </div>  
