--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <div class="taskbar">
         <img id="logo" src="https://www.thesparksfoundationsingapore.org/images/logo_small.png" alt="Sparks logo">
         <ul class="right">
-            <li class="menu-item"><a href="/index.html">Home</a></li>
+            <li class="menu-item"><a href="index.html">Home</a></li>
             <li class="menu-item">Contact</li>
         </ul>
         <span><h2>The Sparks Foundation</h2></span>
