--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img id="logo" src="https://www.thesparksfoundationsingapore.org/images/logo_small.png" alt="Sparks logo">
         <ul class="right">
             <li class="menu-item">Home</li>
-            <li class="menu-item"><a href="/contact.html">Contact</a></li>
+            <li class="menu-item"><a href="contact.html">Contact</a></li>
         </ul>
         <span><h2>The Sparks Foundation</h2></span>
     </div>
@@ -21,7 +21,7 @@
         <p>
             As a non-profit, we rely on donations to provide the food to homeless people,<br> specially in these times of pandemic,<br> they need you the most.<br><br><b>100% of your donation will be spent on the food and homeless people that are counting on you.</b>
         </p><br>
-        <button class="btn"><a style="text-decoration: none;" href="/donate.html">Donate</a></button>
+        <button class="btn"><a style="text-decoration: none;" href="donate.html">Donate</a></button>
     </div>
     <div id="bottom">
         <p>©2021 Hritik Kumar</p>
